added new img and changed buttons

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
     </div>
   </div>
 
-  <button type="button" class="btn btn-heart btn-lg"></button>
-<button type="button" class="btn btn-skull btn-lg">Large button</button>
+  <img id="dislike" src="./1301705_pixel-skull-png.png" width="50px">
+  <img id="like" src="./99-996502_heart-zelda-8-bit-heart-zelda-hd-png.png" width="50px">
+
 
 
 
