--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
   </div>
 
-  <img id="dislike" src="./1301705_pixel-skull-png.png" width="50px">
-  <img id="like" src="./99-996502_heart-zelda-8-bit-heart-zelda-hd-png.png" width="50px">
+  <img class="dislike" src="./1301705_pixel-skull-png.png" width="50px" height="50px">
+  <img class="like" src="./99-996502_heart-zelda-8-bit-heart-zelda-hd-png.png" width="50px" height="50px">
 
 
 
