looking to clean up divs, add more information between APIs

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-  <script src="https://www.gstatic.com/firebasejs/7.2.3/firebase-app.js"></script>
-
+  <!-- firebase -->
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-database.js"></script>
 
 
   <style>
@@ -53,8 +54,8 @@
           <h5 class="card-title">Game Title</h5>
           <div id="rating"></div>
           <div id="name"></div>
-          <div></div>
-          <div></div>
+          <div id="date"></div>
+          <div id="store"></div>
         </div>
       </div>
     </div>
@@ -69,7 +70,7 @@
   <!-- moment.js -->
 <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <!-- js link -->
-<script type="text/javascript" src="firebase.js"></script>
+<!-- <script type="text/javascript" src="firebase.js"></script> -->
 <script type="text/javascript" src="logic.js"></script>
 </body>
 
