--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <div id="name"></div>
           <div id="date"></div>
           <div id="store"></div>
+          <div id="platform"></div>
         </div>
       </div>
     </div>
