--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
       <meta charset="utf-8">
       <title>RevolveR Test</title>
-      <style type="text/css">
+      <!-- <style type="text/css">
         button,
         div,
         form,
         input {
           margin: 10px;
         }
-      </style>
+      </style> -->
     </head>
     
     <body>
