--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    
   <!--CSS-->
   <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
@@ -20,64 +20,82 @@
   <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/6.0.4/firebase-database.js"></script>
 
+  <!-- Materialize -->
+  <!-- <link type="text/css" rel="stylesheet" href="./assets/css/materialize.css" media="screen,projection" /> -->
+
+  <script>
+
+</script>
+
 </head>
 
 <body>
+      <!--MODAL-->
+      <div id="myModal" class="modal fade">
+
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
+                      <h4 class="modal-title">Revolver</h4>
+                  </div>
+
+                  <div class="modal-body">
+              <p>Woohoo, enter your name to save your selection!</p>
+                      <form>
+                          <div class="form-group">
+                              <input type="text" class="form-control" placeholder="Name">
+                          </div>
+                          <button id="sign" type="submit" class="btn btn-primary">Sign-In</button>
+                      </form>
+                  </div>
+              </div>
+          </div>
+      </div>
+
   <!-- NAVBAR -->
-  <div class="container" id="container1">
-    <!-- <div class="row"> -->
-    <nav class="navbar navbar-light bg-light">
-      <span class="navbar-brand mb-0 h1">Revolver</span>
-      <form class="form-inline my-2 my-lg-0">
-        <input id="inputSearch" class="form-control mr-sm-2 " type="search" placeholder="Search" aria-label="Search">
-        <button id="buttonSearch" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-    </nav>
-    <!-- </div> -->
+  <nav class="navbar navbar-light bg-light lg-8 md-4" >
+    <span class="navbar-brand ">REVOLVER</span>
+    <form class="form-inline col-md-6">
+      <!-- SEARCH BUTTON-->
+      <input id="inputSearch" class="form-control  col-md-4" type="search" placeholder="Search" aria-label="Search">
+      <button id="buttonSearch" class="btn btn-outline-success col-md-4" type="submit">Search</button>
+    </form>
+  </nav>
+  <!-- </div> -->
   </div>
 
-  <!-- ARROWS SIDES -->
-  <div id="small12" class="container col-sm-12">
-    <div class="row" id="rowCard">
 
-      <div id="buttonBack" class="col-md-2">
-        <button type="button" class="btn btn-primary btn-lg ">
+  <!-- CARD -->
+  <div id="card" class="col-md-8 ">
+    <div class="card mb-6 " style="max-width:1000px;">
+      <div class="row no-gutters">
+        <div class="col-md-4">
+          <img src="./assets/images/gif_sword.gif" class="card-img" alt="">
+        </div>
+        <div class="col-md-8">
 
-          <</button> </div> <!-- CARD -->
-            <div id="cardAll" class="col-md-8 ">
-              <div class="card mb-3 " style="max-width:1000px;">
-                <div class="row no-gutters">
-                  <div class="col-md-4">
-                    <img src="./assets/images/gif_sword.gif" class="card-img" alt="">
-                  </div>
-                  <div class="col-md-8">
-                    <!-- TEXT INSIDE CARD-->
-                    <div class="card-body">
-                      <h5 class="card-title">Game Title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional
-                        content. This content is a little bit longer.</p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg"
-                          width="50px"></button>
-                      <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg"
-                          width="50px"></button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div id="buttonNext" class="col-md-2">
-              <button type="button" class="btn btn-secondary btn-lg ">>
-              </button>
-            </div>
-
+          <!-- TEXT INSIDE CARD-->
+          <div class="card-body">
+            <h5 class="card-title">Game Title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+              additional
+              content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg"
+                width="50px"></button>
+            <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg"
+                width="50px"></button>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
 
-    <!--Script-->
-    <script src="./js/app2.js"></script>
+  <!--Script-->
+  <script src="./js/app2.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- <script type="text/javascript" src="./js/materialize.js"></script> -->
 </body>
 
 <footer></footer>
