--- a/index.html
+++ b/index.html
@@ -23,30 +23,26 @@
   <!-- Materialize -->
   <!-- <link type="text/css" rel="stylesheet" href="./assets/css/materialize.css" media="screen,projection" /> -->
 
-  <script>
-  </script>
-
 </head>
 
 <body>
+
   <!--MODAL-->
   <div id="myModal" class="modal fade">
-
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
           <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button> -->
           <h4 class="modal-title">Revolver Login</h4>
         </div>
-
         <div class="modal-body" style="padding:40px 50px;">
-          <p>Woohoo, enter your name to save your selection!</p>
+          <p> <strong>Woohoo! </strong>Enter your name to save your selection.</p>
           <form>
             <div class="form-group">
               <input id="userNameInput" type="text" class="form-control" placeholder="Name">
             </div>
-            <button id="loginButton" type="submit" class="btn btn-success btn-block" data-dismiss="modal"><span class="glyphicon glyphicon-off"></span> Login</button>
-           
+            <button id="loginButton" type="submit" class="btn btn-success btn-block" data-dismiss="modal"><span
+                class="glyphicon glyphicon-off"></span> Login</button>
           </form>
         </div>
         <div class="modal-footer"></div>
@@ -56,44 +52,47 @@
 
   <!-- NAVBAR -->
   <nav class="navbar navbar-light bg-light lg-8 md-4">
-    <span class="navbar-brand ">REVOLVER</span>
+    <span class="navbar-brand ">Revolver</span>
     <form class="form-inline col-md-6">
 
-      <!-- SEARCH BUTTON-->
-      <input id="inputSearch" class="form-control  col-md-4" type="search" placeholder="Search" aria-label="Search">
-      <button id="buttonSearch" class="btn btn-outline-success col-md-4" type="submit">Search</button>
-      <p id="userName" text=""> </p>
+      <!-- SEARCH BUTTON inside NavBar -->
+      <div class="row"></div>
+      <input id="inputSearch" class="form-control  col-md-6" type="search" placeholder="Search" aria-label="Search">
+      <button id="buttonSearch" class="btn btn-outline-success col-md-3" type="submit">Search</button>
+      <p id="userName" text="" class=" col-md-3"> </p>
+      </div>
     </form>
   </nav>
-  <!-- </div> -->
-  </div>
 
 
   <!-- CARD -->
-  <div id="card" class="col-md-8 ">
-    <div class="card mb-6 " style="max-width:1000px;">
+  <div class="container">
+    <div class="row"></div>
+
+    <div id="card">
       <div class="row no-gutters">
-        <div class="col-md-4">
+        <div class="img col-md-4">
+          <!-- IMAGE -->
           <img src="./assets/images/gif_sword.gif" class="card-img" alt="">
         </div>
-        <div class="col-md-8">
+        <!-- TEXT INSIDE CARD-->
+        <div class="card-body col-md-8">
+          <h5 class="card-title">Game Title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+            additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 
-          <!-- TEXT INSIDE CARD-->
-          <div class="card-body">
-            <h5 class="card-title">Game Title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-              additional
-              content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg"
-                width="50px"></button>
-            <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg"
-                width="50px"></button>
-          </div>
+          <!-- LIKE/DISLIKE BUTTONS-->
+          <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg"
+              width="50px"></button>
+          <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg"
+              width="50px"></button>
         </div>
       </div>
     </div>
   </div>
+  </div>
+
 
   <!--Script-->
   <script src="./js/app2.js"></script>
