search and name responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <nav class="navbar navbar-collapse navbar-light bg-light my-0">
       <span class="navbar-brand ">Revolver</span>
       <!-- SEARCH BUTTON-->
-        <form class="form-inline  ">
+        <form class="form-inline">
         <div class="row ">
           <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button id="buttonSearch" class="btn btn-outline-success my-2 my-sm-0 " type="submit">Search</button>
@@ -72,7 +72,7 @@
     <div class="row no-gutters">
       <div class="col-xs-12 col-md-4">
         <!-- IMAGE -->
-        <img src="./assets/images/gif_sword.gif" class="card-img" alt="" width="100px">
+        <img src="./assets/images/gif_sword.gif" class="card-img" alt="" width="100px"> <!-- Image to link with array-->
       </div>
       <!-- TEXT INSIDE CARD-->
       <div class="card-body col-xs-12 col-md-7">
@@ -81,9 +81,9 @@
           additional content. This content is a little bit longer.</p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         <!-- LIKE/DISLIKE BUTTONS-->
-        <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg" width="50px"></button>
-        <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg"
-            width="50px"></button>
+        <button id="buttonHeart"> <img id="like" src="./assets/images/heart02READY_500x700.jpeg" width="50px"></button> <!-- Button to link with DB-->
+        <button id="buttonSkull"><img id="dislike" src="./assets/images/skull02READY_500x700.jpeg" 
+            width="50px"></button> <!-- Button to link with delete .remove()-->
       </div>
     </div>
   </div>
