--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <span id="brand" class="navbar-brand ">Revolver</span>
         <!-- SEARCH BUTTON-->
         <form class="form-inline my-4 my-lg-0">
-          <input id="inputSearch" class="form-control mr-sm-8" type="search" placeholder="Search" aria-label="Search">
-          <button id="buttonSearch" class="btn btn-outline-success my-2 my-sm-2" type="submit">Search</button>
-          <p id="userName" text="" class=" userName "> </p>
+          <input id="inputSearch" class="form-control mr-sm-12" type="search" placeholder="Search" aria-label="Search">
+          <button id="buttonSearch" class="btn btn-outline-success my-2 my-sm-12" type="submit">Search</button>
+          <p id="userName" text="" class=" userName sm-12"> </p>
         </form>
       </nav>
     </div>
